fixed bottom navbar hiding text on mobile

--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -2,6 +2,7 @@
     margin-top: 50px;
     font-size: 1.1rem;
     line-height: 1.8rem;
+    margin-bottom: 100px;
 }
 .image {
 }
